# imgcompressor

./: .gitignore  .pypirc  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/ImgCompressCRPython/: compress.py
